feat(backend): update swagger
